syntax = "proto3";

option go_package = "./pb";

package errors;

enum Visibility {
  VISIBILITY_PUBLIC = 0;
  VISIBILITY_PRIVATE = 2;
}

enum Origin {
  ORIGIN_SYSTEM = 0;
  ORIGIN_USER = 1;
}

message Error {
  string message = 1;
  Origin origin = 2;
  Visibility visibility = 3;
  uint32 code = 4;
}